1507.log
HTTP/1.0 200 OK
Content-type: text/html



Hello world
<p>name: default
<p>sex: default
<p>blood: default
<p>end</p>
Content-type: text/html


<H3>Current Working Directory:</H3>
/Users/kohkubo/GitHub/42_master/webserv


<H3>Command Line Arguments:</H3>

['html//cgi_test/test.py']


<H3>Form Contents:</H3>
<P>No form fields.
<DL>
</DL>


<H3>Shell Environment:</H3>
<DL>
<DT> CPATH <DD> /usr/local/include
<DT> GATEWAY_INTERFACE <DD> CGI/1.1
<DT> LC_CTYPE <DD> UTF-8
<DT> LIBRARY_PATH <DD> /usr/local/lib
<DT> PATH_INFO <DD> /Users/kohkubo/GitHub/42_master/webserv/html/cgi_test/test.py
<DT> PATH_TRANSLATED <DD> /Users/kohkubo/GitHub/42_master/webserv/html/cgi_test/test.py
<DT> QUERY_STRING <DD> 
<DT> REMOTE_ADDR <DD> 127.0.0.1
<DT> REMOTE_HOST <DD> 127.0.0.1
<DT> REQUEST_METHOD <DD> GET
<DT> SCRIPT_NAME <DD> test.py
<DT> SDKROOT <DD> /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
<DT> SERVER_NAME <DD> localhost
<DT> SERVER_PORT <DD> 55000
<DT> SERVER_PROTOCOL <DD> HTTP/1.1
<DT> SERVER_SOFTWARE <DD> webserv 0.0.0
<DT> __CF_USER_TEXT_ENCODING <DD> 0x1F5:0x1:0xE
</DL>


<H3>These environment variables could have been set:</H3>
<UL>
<LI>AUTH_TYPE
<LI>CONTENT_LENGTH
<LI>CONTENT_TYPE
<LI>DATE_GMT
<LI>DATE_LOCAL
<LI>DOCUMENT_NAME
<LI>DOCUMENT_ROOT
<LI>DOCUMENT_URI
<LI>GATEWAY_INTERFACE
<LI>LAST_MODIFIED
<LI>PATH
<LI>PATH_INFO
<LI>PATH_TRANSLATED
<LI>QUERY_STRING
<LI>REMOTE_ADDR
<LI>REMOTE_HOST
<LI>REMOTE_IDENT
<LI>REMOTE_USER
<LI>REQUEST_METHOD
<LI>SCRIPT_NAME
<LI>SERVER_NAME
<LI>SERVER_PORT
<LI>SERVER_PROTOCOL
<LI>SERVER_ROOT
<LI>SERVER_SOFTWARE
</UL>
In addition, HTTP headers sent by the server may be passed in the
environment as well.  Here are some common variable names:
<UL>
<LI>HTTP_ACCEPT
<LI>HTTP_CONNECTION
<LI>HTTP_HOST
<LI>HTTP_PRAGMA
<LI>HTTP_REFERER
<LI>HTTP_USER_AGENT
</UL>

<H3>What follows is a test, not an actual exception:</H3>

<H3>Traceback (most recent call last):</H3>
<PRE>  File &quot;/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/cgi.py&quot;, line 864, in test
    g()
  File &quot;/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/cgi.py&quot;, line 862, in g
    f()
  File &quot;/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/cgi.py&quot;, line 860, in f
    exec(&quot;testing print_exception() -- &lt;I&gt;italics?&lt;/I&gt;&quot;)
  File &quot;&lt;string&gt;&quot;, line 1
    testing print_exception() -- &lt;I&gt;italics?&lt;/I&gt;
            ^
<B>SyntaxError: invalid syntax
</B></PRE>
<H1>Second try with a small maxlen...</H1>

<H3>Current Working Directory:</H3>
/Users/kohkubo/GitHub/42_master/webserv


<H3>Command Line Arguments:</H3>

['html//cgi_test/test.py']


<H3>Form Contents:</H3>
<P>No form fields.
<DL>
</DL>


<H3>Shell Environment:</H3>
<DL>
<DT> CPATH <DD> /usr/local/include
<DT> GATEWAY_INTERFACE <DD> CGI/1.1
<DT> LC_CTYPE <DD> UTF-8
<DT> LIBRARY_PATH <DD> /usr/local/lib
<DT> PATH_INFO <DD> /Users/kohkubo/GitHub/42_master/webserv/html/cgi_test/test.py
<DT> PATH_TRANSLATED <DD> /Users/kohkubo/GitHub/42_master/webserv/html/cgi_test/test.py
<DT> QUERY_STRING <DD> 
<DT> REMOTE_ADDR <DD> 127.0.0.1
<DT> REMOTE_HOST <DD> 127.0.0.1
<DT> REQUEST_METHOD <DD> GET
<DT> SCRIPT_NAME <DD> test.py
<DT> SDKROOT <DD> /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
<DT> SERVER_NAME <DD> localhost
<DT> SERVER_PORT <DD> 55000
<DT> SERVER_PROTOCOL <DD> HTTP/1.1
<DT> SERVER_SOFTWARE <DD> webserv 0.0.0
<DT> __CF_USER_TEXT_ENCODING <DD> 0x1F5:0x1:0xE
</DL>

